# xzerokv

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
include/: xzkv.h  xzkv_def.h  xzkv_log.h  xzkv_sys.h
src/: main.c  xzkv_log.c  xzkv_sys.c
